--- a/new-vector-whitespace.user.css
+++ b/new-vector-whitespace.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 whitespace and tweaks
 @namespace   StylishThemes
-@version     1.0.87
+@version     1.0.88
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-whitespace.user.css
 @license     CC-BY-SA-4.0
@@ -109,7 +109,7 @@ domain("patchdemo.wmflabs.org") {
   top: 0;
   left: 12px;
   padding: 0;
-  z-index: 400 !important;
+  z-index: 10 !important;
 }
 /* Nudge content down to account for no-default gap */
 @media screen and (max-width: 999px) {
@@ -230,7 +230,8 @@ html {
   box-shadow: none
 }
 .skin-vector-2022 #coordinates {
-  top: -0.9em;
+  top: 0.8em;
+  right: 5em;
 }
 .vector-menu-tabs .mw-list-item .mw-ui-icon {
   margin: 0;
