--- a/new-vector-tests.user.css
+++ b/new-vector-tests.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 tests
 @namespace   StylishThemes
-@version     1.0.30
+@version     1.0.31
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-tests.user.css
 @license     CC-BY-SA-4.0
@@ -61,6 +61,10 @@ nav.vector-user-links {
 }
 .mw-page-container {
   z-index: unset !important;
+}
+/* Fix contribs link which got misaligned */
+#pt-contribs {
+  margin-top: -5px !important;
 }
   
 /* -- more Failed attempts below 
