Highlight RC in sidebar

--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.0.93
+@version     1.0.94
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -140,4 +140,8 @@ domain("patchdemo.wmflabs.org") {
     background-color: lightgreen;
   }
 
+  /* Highlight RC in sidebar cos wikis keep moving it */
+  #n-recentchanges {
+    background-color: #d3f2d3
+  }
 }
