--- a/new-vector-fixed-pagetools.user.css
+++ b/new-vector-fixed-pagetools.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 Fixed Page Toolbar
 @namespace   StylishThemes
-@version     1.0.02
+@version     1.0.03
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-fixed-pagetools.user.css
 @license     CC-BY-SA-4.0
@@ -106,15 +106,8 @@ domain("wikifunctions.org") {
 }
 
 /* Fix sitenotice margin */
-@media screen and (min-width: 1000px) {
-  #siteNotice {
-    margin-top: 25px;
-  }
-}
-@media screen and (max-width: 999px) {
-  #siteNotice {
-    top: 25px !important;
-  }
+#siteNotice {
+  top: 25px;
 }
 
 /* Shorten the "view history" to just "history" */
